--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Hi iam mathew</h1>
+<body style="background-color: black;">
+    <h1 style="color: aqua;">Hi iam mathew</h1>
 </body>
 </html>
