--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body style="background-color: black;">
-    <h1 style="color: aqua;">Hi iam mathew</h1>
+<body>
+    <h1>Hi iam mathew</h1>
 </body>
 </html>
